fix spacing under form on mobile after switch to padding

--- a/styles.css
+++ b/styles.css
@@ -275,7 +275,7 @@ li span.edit-input-box:focus {
   }
 
   form {
-    margin-bottom: 1.5rem;
+    padding-bottom: 1.5rem;
   }
 
   li {
